--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@
 							<p class="sayHi">Hello</p>
 
 							<div class="name">
-								<p><span>I'm</span> Lmint</p>
+								<p><span>I'm</span> Mi2Trung</p>
 								<p class="s">Verified
 									<span class="ion-ios-checkmark-outline"></span>
 								</p>
-								<p><span class="ion-android-globe"></span> AnonyViet.com</p>
+								<p><span class="ion-android-globe"></span> Mi2Trung.com</p>
 							</div>
 							<hr>
 
 							<div class="detailInfo">
 								<div class="row my-2">
 									<div class="col-lg-4 col-12 boldd">Tên</div>
-									<div class="col-lg-8 col-12 b">Lmint</div>
+									<div class="col-lg-8 col-12 b">Hải Đào</div>
 								</div>
 								<div class="row my-2">
 									<div class="col-lg-4 col-12 boldd">Công ty</div>
-									<div class="col-lg-8 col-12 b">AnonyViet Site</div>
+									<div class="col-lg-8 col-12 b">Mi2Trung</div>
 								</div>
 								<div class="row my-2">
 									<div class="col-lg-4 col-12 boldd">Jobs</div>
-									<div class="col-lg-8 col-12 b">Web Developer</div>
+									<div class="col-lg-8 col-12 b">Học Sinh</div>
 								</div>
 								<div class="row">
 									<div class="col-lg-4 col-12 boldd">Tuổi</div>
-									<div class="col-lg-8 col-12 b">19 Years Old</div>
+									<div class="col-lg-8 col-12 b">99 Years Old</div>
 								</div>
 
 							</div>
@@ -72,10 +72,12 @@
 			<div class="col-11 mx-auto bg-danger contact text-center">
 				<div class="social col-12">
 					<!-- Facebook -->
-					<a href="https://facebook.com/minhthong.lu.58" target="_blank">
+					<a href="https://www.facebook.com/DTH.3006/" target="_blank">
 						<span class="ion-social-facebook mr-4 mr-lg-5"></span>
 					</a>
+					<a href="https://www.instagram.com/mi2trung/" target="_blank">
 					<span class="ion-social-instagram-outline mr-4 mr-lg-5 ml-lg-3"></span>
+					</a>
 					<span class="ion-social-whatsapp-outline mr-4 mr-lg-5 ml-lg-3"></span>
 					<span class="ion-social-skype-outline mr-4 mr-lg-5 ml-lg-3"></span>
 					<span class="ion-social-twitter-outline mr-4 mr-lg-5 ml-lg-3"></span>
