--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
 					<a href="https://www.instagram.com/mi2trung/" target="_blank">
 					<span class="ion-social-instagram-outline mr-4 mr-lg-5 ml-lg-3"></span>
 					</a>
-					<span class="ion-social-whatsapp-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					<span class="ion-social-skype-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					<span class="ion-social-twitter-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					<span class="ion-social-linkedin-outline ml-lg-3"></span>
+					
 				</div>
 			</div>
 		</div>
@@ -93,7 +90,7 @@
 		<div class="row">
 			<div class="col-11 text-right">
 				<p class="license mr-lg-4 mr-0">
-					<a href="https://anonyviet.com"></a>
+					<a href="https://mi2trung.com"></a>
 				</p>
 			</div>
 		</div>
