--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Lmint</title>
+	<title>Mi2Trung</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="sheet/bootstrap.css">
 	<link rel="stylesheet" href="sheet/ionicons.min.css">
@@ -38,7 +38,7 @@
 
 							<div class="name">
 								<p><span>I'm</span> Mi2Trung</p>
-								<p class="s">Verified
+								<p class="s">Đã Xác Minh
 									<span class="ion-ios-checkmark-outline"></span>
 								</p>
 								<p><span class="ion-android-globe"></span> Mi2Trung.com</p>
